--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="col-lg-6">
               <ul>
                 <!--<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>-->
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://jumacaq.github.io/Portfolio/</span></li>
                 <!--<li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>data_analyst_jcq@outlook.com</span></li>-->
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lima, Peru</span></li>
               </ul>
