--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a href="https://github.com/jumacaq" target="_blank" class="github"><i class="bi bi-github"></i></a>
         <!--<a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>-->
-        <a href="https://www.linkedin.com/in/juan-campos-q/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/jumacaq/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
